# aas

./: .gitignore  com.github.tomrosen.aas.yml  lang  meson.build
.github/workflows/: main.yml
data/: aas.desktop.in  aas.metainfo.xml.in  gschema.xml  meson.build
meson/: post_install.py
po/: POTFILES  com.github.tomrosen.aas.pot  de.po
src/: Application.vala  Components.vala  Dialog.vala  Options.vala  Utils.vala
